final model specification

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -378,16 +378,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import random\n",
-    "from typing import List, Tuple, Any\n",
-    "from statsmodels.tsa.statespace.sarimax import SARIMAX\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "def sarimax_randomized_grid_search(\n",
     "        train_y: pd.Series,\n",
     "        train_X: pd.DataFrame,\n",
@@ -462,13 +456,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "853cb916e5a94936a26f52fe91a53d7f",
+       "model_id": "683a40ae2b1d4ad484a9008f7d7beb65",
        "version_major": 2,
        "version_minor": 0
       },
@@ -497,9 +491,10 @@
     "    train_y=train_endo,\n",
     "    train_X=train_exo,\n",
     "    order_list=parameters_list,\n",
-    "    n_iter=10,\n",
+    "    n_iter=5,\n",
     "    d=1,\n",
-    "    D=0\n",
+    "    D=0,\n",
+    "    random_state=42\n",
     ")"
    ]
   },
@@ -514,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -538,44 +533,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>order(p, 1, q)(P, 0, Q, 24)</th>\n",
+       "      <th>order</th>\n",
        "      <th>AIC</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>(2, 1, 2, 0)</td>\n",
-       "      <td>80490.807502</td>\n",
+       "      <td>(1, 1, 2, 1, 0, 2, 24)</td>\n",
+       "      <td>80136.959708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>(0, 1, 2, 2)</td>\n",
-       "      <td>81878.256733</td>\n",
+       "      <th>4</th>\n",
+       "      <td>(1, 1, 1, 2, 0, 1, 24)</td>\n",
+       "      <td>80334.094766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>(1, 1, 1, 0, 0, 1, 24)</td>\n",
+       "      <td>80386.361706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(0, 1, 2, 1, 0, 0, 24)</td>\n",
+       "      <td>80534.452674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(0, 1, 1, 0, 0, 2, 24)</td>\n",
+       "      <td>82254.454157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>(2, 1, 0, 1, 0, 2, 24)</td>\n",
+       "      <td>82488.167631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(2, 1, 0, 0, 0, 0, 24)</td>\n",
+       "      <td>82721.079849</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(1, 1, 0, 1, 0, 1, 24)</td>\n",
+       "      <td>83665.289346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>(0, 1, 1, 1)</td>\n",
-       "      <td>82072.136602</td>\n",
+       "      <td>(1, 1, 0, 0, 0, 0, 24)</td>\n",
+       "      <td>83874.906650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>(0, 1, 0, 2, 0, 2, 24)</td>\n",
+       "      <td>85986.797582</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  order(p, 1, q)(P, 0, Q, 24)           AIC\n",
-       "7                (2, 1, 2, 0)  80490.807502\n",
-       "5                (0, 1, 2, 2)  81878.256733\n",
-       "6                (0, 1, 1, 1)  82072.136602"
+       "                    order           AIC\n",
+       "7  (1, 1, 2, 1, 0, 2, 24)  80136.959708\n",
+       "4  (1, 1, 1, 2, 0, 1, 24)  80334.094766\n",
+       "8  (1, 1, 1, 0, 0, 1, 24)  80386.361706\n",
+       "3  (0, 1, 2, 1, 0, 0, 24)  80534.452674\n",
+       "0  (0, 1, 1, 0, 0, 2, 24)  82254.454157\n",
+       "9  (2, 1, 0, 1, 0, 2, 24)  82488.167631\n",
+       "2  (2, 1, 0, 0, 0, 0, 24)  82721.079849\n",
+       "1  (1, 1, 0, 1, 0, 1, 24)  83665.289346\n",
+       "6  (1, 1, 0, 0, 0, 0, 24)  83874.906650\n",
+       "5  (0, 1, 0, 2, 0, 2, 24)  85986.797582"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sarimax_results.sort_values('AIC').head(3)"
+    "sarimax_results"
    ]
   },
   {
@@ -584,12 +621,12 @@
    "source": [
     "Best model based on AIC\n",
     "\n",
-    "$$SARIMA(2,1,2)(2,0,2)_{24}$$ "
+    "$$SARIMAX(1,1,2)(1,0,2)_{24}$$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +634,7 @@
     "\n",
     "os.makedirs('./results', exist_ok=True)\n",
     "\n",
-    "sarimax_results.sort_values('AIC').to_csv('./results/sarimax_grid_search_results.csv', index=False)"
+    "sarimax_results.sort_values('AIC').to_csv('./results/sarimax_randomized_grid_search_results.csv', index=False)"
    ]
   },
   {
@@ -605,6 +642,77 @@
    "metadata": {},
    "source": [
     "## Model Diagnostics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==========================================\n",
+      "Best order: SARIMAX(1, 1, 2)(1, 0, 2)_[24]\n",
+      "==========================================\n",
+      "\n",
+      "                                     SARIMAX Results                                      \n",
+      "==========================================================================================\n",
+      "Dep. Variable:                Global_active_power   No. Observations:                27669\n",
+      "Model:             SARIMAX(1, 1, 2)x(1, 0, 2, 24)   Log Likelihood              -40054.480\n",
+      "Date:                            Tue, 05 Mar 2024   AIC                          80136.960\n",
+      "Time:                                    12:59:05   BIC                          80252.152\n",
+      "Sample:                                12-16-2006   HQIC                         80174.063\n",
+      "                                     - 02-11-2010                                         \n",
+      "Covariance Type:                              opg                                         \n",
+      "=========================================================================================\n",
+      "                            coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------------\n",
+      "intercept                 0.0013      0.002      0.751      0.453      -0.002       0.005\n",
+      "Global_reactive_power    -0.1617      0.001   -112.109      0.000      -0.164      -0.159\n",
+      "Voltage                   0.0042   6.32e-05     66.111      0.000       0.004       0.004\n",
+      "Global_intensity          0.2390   6.08e-05   3931.037      0.000       0.239       0.239\n",
+      "Sub_metering_1           -0.0010   2.33e-05    -41.235      0.000      -0.001      -0.001\n",
+      "Sub_metering_2           -0.0008   2.02e-05    -40.113      0.000      -0.001      -0.001\n",
+      "Sub_metering_3            0.0019   2.13e-05     87.800      0.000       0.002       0.002\n",
+      "ar.L1                     0.2035      0.018     11.286      0.000       0.168       0.239\n",
+      "ma.L1                    -0.6483      0.018    -35.104      0.000      -0.684      -0.612\n",
+      "ma.L2                    -0.1103      0.011     -9.953      0.000      -0.132      -0.089\n",
+      "ar.S.L24                  0.1216      0.095      1.280      0.200      -0.065       0.308\n",
+      "ma.S.L24                  0.0083      0.095      0.088      0.930      -0.178       0.194\n",
+      "ma.S.L48                  0.0386      0.013      2.985      0.003       0.013       0.064\n",
+      "sigma2                    1.0219      0.004    275.775      0.000       1.015       1.029\n",
+      "===================================================================================\n",
+      "Ljung-Box (L1) (Q):                   6.99   Jarque-Bera (JB):            127598.17\n",
+      "Prob(Q):                              0.01   Prob(JB):                         0.00\n",
+      "Heteroskedasticity (H):               0.89   Skew:                            -0.83\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                        13.39\n",
+      "===================================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_order = sarimax_results.iloc[0, 0]\n",
+    "non_seasonal_order = best_order[:3]\n",
+    "seasonal_order = best_order[-4:-1]\n",
+    "seasonl_period = best_order[-1]\n",
+    "print(\"==========================================\")\n",
+    "print(f\"Best order: SARIMAX{non_seasonal_order}{seasonal_order}_[{seasonl_period}]\")\n",
+    "print(\"==========================================\\n\")\n",
+    "\n",
+    "\n",
+    "final_model = SARIMAX(\n",
+    "    endog=train_endo,\n",
+    "    exog=train_exo,\n",
+    "    order=non_seasonal_order,\n",
+    "    seasonal_order=(*seasonal_order, seasonl_period),\n",
+    "    trend='c'\n",
+    ").fit(disp=0)\n",
+    "print(final_model.summary())"
    ]
   },
   {
@@ -658,7 +766,7 @@
     }
    ],
    "source": [
-    "best_order = sarimax_results.sort_values('AIC').iloc[0]['order(p, 1, q)(P, 0, Q, 24)']\n",
+    "best_order = sarimax_results.iloc[0, 0]\n",
     "print(\"=========================================\")\n",
     "print(f\"Best order: SARIMA({best_order[0]}, 1, {best_order[1]})({best_order[2]}, 0, {best_order[3]})_[24]\")\n",
     "print(\"=========================================\\n\")\n",
