--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -368,11 +368,11 @@
    "source": [
     "The PACF plot is also sinusoidal. This indicates no order for the MA(q) or AR(p) process that can be inferred. We are probably in the presence of an SARMA process.\n",
     "\n",
-    "We will list different possible values of p, Q, q and Q (positive integers). With a list of possible values, we can fit every unique combination of $SARIMA(p,d,q)(P,D,Q)_m$  to our data. Once that’s done, we can compute the Akaike Information Criterion (AIC), Root Mean Squared Error (RMSE), Coefficient of Determination ($R^2$), Mean Absolute Error (MAE), or other metrics. The model with the best metric is then selected. This is essentially hyperparameter optimization. Note that because we did not do a seasonal diffenece to make our series stationary, the D component of our SARIMA will be 0. In essense, our model is:\n",
+    "We will list different possible values of p, Q, q and Q (positive integers). With a list of possible values, we can fit every unique combination of $SARIMA(p,d,q)(P,D,Q)_m$  to our data. Once that’s done, we can compute the Akaike Information Criterion (AIC). The model with the lowest AIC is then selected. You can think of this as hyperparameter optimization in Machine Learning. Note that because we did not do a seasonal diffenece to make our series stationary, the D component of our SARIMA will be 0. In essense, our model is:\n",
     "\n",
     "$$SARIMA(p,d,q)(P,D,Q)_m = SARIMA(p,1,q)(P,0,Q)_{24}$$ \n",
     "\n",
-    "I will randomly selected 15 combinations so that the model runs for a reasonable time.\n"
+    "I will randomly select 10 combinations so that the model runs for a reasonable time."
    ]
   },
   {
@@ -618,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Best model based on AIC\n",
+    "Best model based on AIC is:\n",
     "\n",
     "$$SARIMAX(2,1,1)(2,0,0)_{24}$$ "
    ]
@@ -640,9 +640,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Diagnostics\n",
-    "\n",
-    "We will now examine the residuals"
+    "## Fit the final Model"
    ]
   },
   {
@@ -741,12 +739,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assumptions\n",
+    "## Model Diagnostics (Checking Assumptions)\n",
     "\n",
-    "When using a statistical model for time series analysis, some assumptions must be made about the residual. In most time series models, the residual is the difference between the observed and the predicted values.  A good forecasting model should yield residual with the following property:\n",
+    "We will now examine the residuals of our fitted model. When using a statistical model for time series analysis, some assumptions must be made about the residuals. In most time series models, the residuals are the difference between the observed and the predicted values.  A good forecasting model should yield residuals with the following property:\n",
     "\n",
-    "1. **The residuals are independent**: the residual of a good forecasting model should not be autocorrelated. This assumption can be tested using the Ljung-Box test. The null and alternative hypothesis of the Ljung-Box test are:\n",
-    "\n"
+    "1. **The residuals are independent**: the residuals of a good forecasting model should not be autocorrelated. This assumption can be tested using the Ljung-Box test. The Ljung-Box test assesses the null hypothesis that a series of residuals exhibits no autocorrelation for a fixed number of lags  against the alternative that the some autocorrelation coefficient $\\rho(l), l=1, 2, \\cdots, L$ is nonzero.\n",
+    "\n",
+    "2. **The residuals averages to zero**: The residuals of a good time series model must have a mean of zero. otherwise, it is biased.\n",
+    "\n",
+    "\n",
+    "If these assumptions are not satisfied, then the forecasting model can be improved to give a better forecast. Correcting for bias is straightforward: if the mean of the residuals is `m`, then by adding `m` to all predictions, the issue of bias can be resolved. Fixing autocorrelated residuals problem is a bit harder and beyon the scope of this project. However, for interested readers, see [Dynamic Regression Models](https://otexts.com/fpp2/dynamic.html).\n",
+    "\n",
+    "There are two more desired (but not necessary) assumptions:\n",
+    "\n",
+    "1. The residuals should be homoskedastic.\n",
+    "2. The residials are normally distributed.\n",
+    "\n",
+    "These assumptions makes the computation of prediction intervals easier. A model violating the last two assumptions can not necessarily be improved. Sometimes, log or Box-Cox transformation may help. However, in other cases, there is usually a little you can do if your model violate these assumptions. Instead, other approaches for computing prediction intervals must be explored. \n",
+    "\n",
+    "Alternatively, we can defer to Machine Learning (ML) techniques that do not make any assumption about residuals."
    ]
   },
   {
