added assumption test

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -785,7 +785,11 @@
    "source": [
     "1. **Independent residual**: The model output contains the Ljung-Box test result. The p-value for this test is displayed as Prob(Q). The returned Ljung-Box test a p-value of 0.24. Since $0.24 > 0.05$, we do not reject the null hypothesis and conclude that our series of residuals exhibits no autocorrelation. Assumption met ✅.\n",
     "\n",
-    "Our residuals have zero mean, meaning the zero residual mean assumption is met ✅.\n"
+    "2. **Zero Residual Mean**: Our residuals have zero mean. Assumption met ✅.\n",
+    "3. **Normality of Residuals**: The model output contains the normality of residuals test result. The p-value is displayed as Prob(JB). Since $0.00 < 0.05$, we reject the null hypothesis and conclude that our series of residuals is not normally distributed. Assumption not met ❌.\n",
+    "4. **Homoskedastic Residual Assumption**: The model output also contains the homoskedasticity test result.  The p-value is displayed as Prob(H) (two-sided). Since $0.00 < 0.05$, we reject the null hypothesis and conclude that our series of residuals is heteroskedastic. Assumption not met ❌.\n",
+    "\n",
+    "The important assumptions were met, so we will use the model for forecasting."
    ]
   },
   {
