--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -802,318 +802,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lb_stat</th>\n",
-       "      <th>lb_pvalue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.781824</td>\n",
-       "      <td>9.533951e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.161008</td>\n",
-       "      <td>1.248673e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>34.786822</td>\n",
-       "      <td>1.351360e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>139.061490</td>\n",
-       "      <td>4.482906e-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>272.984536</td>\n",
-       "      <td>6.396625e-57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>355.934355</td>\n",
-       "      <td>8.210454e-74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>451.470013</td>\n",
-       "      <td>2.146685e-93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>522.652004</td>\n",
-       "      <td>9.681688e-108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>564.223204</td>\n",
-       "      <td>9.924744e-116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>566.074082</td>\n",
-       "      <td>3.250094e-115</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       lb_stat      lb_pvalue\n",
-       "1     2.781824   9.533951e-02\n",
-       "2     4.161008   1.248673e-01\n",
-       "3    34.786822   1.351360e-07\n",
-       "4   139.061490   4.482906e-29\n",
-       "5   272.984536   6.396625e-57\n",
-       "6   355.934355   8.210454e-74\n",
-       "7   451.470013   2.146685e-93\n",
-       "8   522.652004  9.681688e-108\n",
-       "9   564.223204  9.924744e-116\n",
-       "10  566.074082  3.250094e-115"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "acorr_ljungbox(final_model.resid,return_df=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lb_stat</th>\n",
-       "      <th>lb_pvalue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.781824</td>\n",
-       "      <td>9.533951e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.161008</td>\n",
-       "      <td>1.248673e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>34.786822</td>\n",
-       "      <td>1.351360e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>139.061490</td>\n",
-       "      <td>4.482906e-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>272.984536</td>\n",
-       "      <td>6.396625e-57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>355.934355</td>\n",
-       "      <td>8.210454e-74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>451.470013</td>\n",
-       "      <td>2.146685e-93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>522.652004</td>\n",
-       "      <td>9.681688e-108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>564.223204</td>\n",
-       "      <td>9.924744e-116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>566.074082</td>\n",
-       "      <td>3.250094e-115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>566.471879</td>\n",
-       "      <td>2.065075e-114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>567.924786</td>\n",
-       "      <td>7.438924e-114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>577.973277</td>\n",
-       "      <td>3.789845e-115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>577.978826</td>\n",
-       "      <td>2.573541e-114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>578.062407</td>\n",
-       "      <td>1.618804e-113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>589.079857</td>\n",
-       "      <td>4.730669e-115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>592.082892</td>\n",
-       "      <td>6.759099e-115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>599.167347</td>\n",
-       "      <td>1.290633e-115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>609.474187</td>\n",
-       "      <td>5.050778e-117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>610.976572</td>\n",
-       "      <td>1.400406e-116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>612.079996</td>\n",
-       "      <td>4.599623e-116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>612.080712</td>\n",
-       "      <td>2.516313e-115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>648.687591</td>\n",
-       "      <td>2.776887e-122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>649.706049</td>\n",
-       "      <td>9.129286e-122</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       lb_stat      lb_pvalue\n",
-       "1     2.781824   9.533951e-02\n",
-       "2     4.161008   1.248673e-01\n",
-       "3    34.786822   1.351360e-07\n",
-       "4   139.061490   4.482906e-29\n",
-       "5   272.984536   6.396625e-57\n",
-       "6   355.934355   8.210454e-74\n",
-       "7   451.470013   2.146685e-93\n",
-       "8   522.652004  9.681688e-108\n",
-       "9   564.223204  9.924744e-116\n",
-       "10  566.074082  3.250094e-115\n",
-       "11  566.471879  2.065075e-114\n",
-       "12  567.924786  7.438924e-114\n",
-       "13  577.973277  3.789845e-115\n",
-       "14  577.978826  2.573541e-114\n",
-       "15  578.062407  1.618804e-113\n",
-       "16  589.079857  4.730669e-115\n",
-       "17  592.082892  6.759099e-115\n",
-       "18  599.167347  1.290633e-115\n",
-       "19  609.474187  5.050778e-117\n",
-       "20  610.976572  1.400406e-116\n",
-       "21  612.079996  4.599623e-116\n",
-       "22  612.080712  2.516313e-115\n",
-       "23  648.687591  2.776887e-122\n",
-       "24  649.706049  9.129286e-122"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# ljung-box test\n",
+    "## Further Reading\n",
     "\n",
-    "from statsmodels.stats.diagnostic import acorr_ljungbox\n",
-    "\n",
-    "acorr_ljungbox(final_model.resid, lags=24, return_df=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.special import inv_boxcox\n",
-    "\n",
-    "original_data = inv_boxcox(transformed_data, lambda_value)"
+    "1. [Time Series Forecasting in Python by Marco Peixeiro](https://www.manning.com/books/time-series-forecasting-in-python-book).\n",
+    "2. [Forecasting: Principles and Practice Rob J Hyndman and George Athanasopoulos](https://otexts.com/fpp2/)."
    ]
   }
  ],
