added forecast metrics

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "\n",
     "\n",
     "from sklearn import set_config\n",
-    "from sklearn.metrics import root_mean_squared_error, r2_score\n",
+    "from sklearn.metrics import root_mean_squared_error, r2_score, mean_absolute_error\n",
     "\n",
     "\n",
     "set_config(\n",
@@ -806,15 +806,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Performamce on test set:\n",
+      "========================\n",
       "RMSE: 5.004\n",
-      "R2: 0.987\n"
+      "R2: 0.987\n",
+      "MAE: 4.297\n"
      ]
     }
    ],
@@ -822,8 +825,10 @@
     "forecast = final_model.get_forecast(steps=len(test_endo), exog=test_exo)\n",
     "forecast_values=forecast.predicted_mean\n",
     "\n",
+    "print(\"Performamce on test set:\\n========================\")\n",
     "print(f\"RMSE: {rmse(test_endo, forecast_values):.3f}\")\n",
-    "print(f\"R2: {r2_score(test_endo, forecast_values):.3f}\")"
+    "print(f\"R2: {r2_score(test_endo, forecast_values):.3f}\")\n",
+    "print(f\"MAE: {mean_absolute_error(test_endo, forecast_values):.3f}\")"
    ]
   },
   {
