added alternatives to forecasting predictors

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -897,6 +897,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## What if the future values of the predictors are unknown?\n",
+    "\n",
+    "\n",
+    "As mentioned above, there is no straight forward solution, you must use your knowledge about the data and your expertise as a data scientist to inform your decision. Here are a few recommendations if the future value of your predictors is unknown:\n",
+    "\n",
+    "1. Use a univariate time series (you can follow all steps outlined above).\n",
+    "2. You may use the last known value: you can use the last known value for your forecast, wait until you have a new value and use that for forecast.\n",
+    "\n",
+    "Again, this is not a one-size fit all situation and your expertise is needed. Let's explore the second option.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Further Reading\n",
     "\n",
     "1. [Time Series Forecasting in Python by Marco Peixeiro](https://www.manning.com/books/time-series-forecasting-in-python-book).\n",
