added refitted model for last known value

--- a/SARIMA.ipynb
+++ b/SARIMA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,6 +944,166 @@
    "metadata": {},
    "source": [
     "There was a massive reduction in model performance. $R^2$ reduced to -0.156 from 0.987. One way to mitigate is you can retrain your model before using it for prediction. Let's see that in action."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_seasonal_order, seasonal_order, seasonl_period =(2, 1, 1), (2, 0, 0), 24\n",
+    "train_exo, train_endo=full_train.drop(['Global_active_power', 'day_sin', 'day_cos'], axis=1), full_train[['Global_active_power']]\n",
+    "test_exo, test_endo=test_df.drop(['Global_active_power', 'day_sin', 'day_cos'], axis=1), test_df[['Global_active_power']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Global_reactive_power</th>\n",
+       "      <th>Voltage</th>\n",
+       "      <th>Global_intensity</th>\n",
+       "      <th>Sub_metering_1</th>\n",
+       "      <th>Sub_metering_2</th>\n",
+       "      <th>Sub_metering_3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-12-17 18:00</th>\n",
+       "      <td>4.802</td>\n",
+       "      <td>14074.81</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>403.0</td>\n",
+       "      <td>1012.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-17 19:00</th>\n",
+       "      <td>5.114</td>\n",
+       "      <td>13993.95</td>\n",
+       "      <td>870.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1001.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-17 20:00</th>\n",
+       "      <td>4.506</td>\n",
+       "      <td>14044.29</td>\n",
+       "      <td>835.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1007.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-17 21:00</th>\n",
+       "      <td>4.600</td>\n",
+       "      <td>14229.52</td>\n",
+       "      <td>782.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1033.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-12-17 22:00</th>\n",
+       "      <td>3.370</td>\n",
+       "      <td>14325.60</td>\n",
+       "      <td>571.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>266.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Global_reactive_power   Voltage  Global_intensity  \\\n",
+       "datetime                                                              \n",
+       "2006-12-17 18:00                  4.802  14074.81             936.0   \n",
+       "2006-12-17 19:00                  5.114  13993.95             870.2   \n",
+       "2006-12-17 20:00                  4.506  14044.29             835.0   \n",
+       "2006-12-17 21:00                  4.600  14229.52             782.8   \n",
+       "2006-12-17 22:00                  3.370  14325.60             571.4   \n",
+       "\n",
+       "                  Sub_metering_1  Sub_metering_2  Sub_metering_3  \n",
+       "datetime                                                          \n",
+       "2006-12-17 18:00             0.0           403.0          1012.0  \n",
+       "2006-12-17 19:00             0.0            86.0          1001.0  \n",
+       "2006-12-17 20:00             0.0             0.0          1007.0  \n",
+       "2006-12-17 21:00             0.0            25.0          1033.0  \n",
+       "2006-12-17 22:00             0.0             8.0           266.0  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def set_index_from_list(df, idx):\n",
+    "    df.index = idx\n",
+    "    return df\n",
+    "\n",
+    "new_train_endo=train_endo.iloc[24:,]\n",
+    "\n",
+    "new_train_exo=(\n",
+    "    train_exo.shift(24)\n",
+    "    .dropna()\n",
+    "    .reset_index(drop=True)\n",
+    "    .pipe(set_index_from_list, new_train_endo.index)\n",
+    ")\n",
+    "\n",
+    "new_train_exo.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2 = SARIMAX(\n",
+    "    endog=new_train_endo,\n",
+    "    exog=new_train_exo,\n",
+    "    order=non_seasonal_order,\n",
+    "    seasonal_order=(*seasonal_order, seasonl_period),\n",
+    "    trend='c'\n",
+    ").fit(disp=0)\n",
+    "print(final_model.summary())"
    ]
   },
   {
